# mhrono

./: Cargo.toml  Justfile  TODO.md
benches/: calendar.rs
src/: cycle.rs  cycles.rs  date.rs  duration.rs  error.rs  fixed_freq.rs  freq.rs  iter.rs  lib.rs  op.rs  semantic_freq.rs  span.rs  time.rs
src/calendars/: cached_calendar.rs  calendar.rs  mod.rs  nyse.rs  us_holidays.rs
src/seq/: inner.rs  mod.rs  scalar_series.rs  series.rs  span_series.rs  timeseries.rs
src/span/: any.rs  endpoint.rs  exc.rs  inc.rs  mod.rs  ops.rs
tests/: calendar.rs  integration.rs
