[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["date-and-time"]
description = "time/date/calendar/timeseries library"
edition = "2024"
keywords = ["calendar", "time", "chrono"]
license = "MIT OR Apache-2.0"
name = "mhrono"
repository = "https://github.com/Edgeworth/mhrono"
version = "0.1.0"

[dependencies]
auto_ops = "0.3.0"
chrono = {version = "0.4.41", features = ["serde"]}
chrono-tz = {version = "0.10.3", features = ["serde"]}
derive_more = {version = "2.0.1", features = ["display", "is_variant"]}
eyre = "0.6.12"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.9.1"
regex = "1.11.1"
rust_decimal = {version = "1.37.1", features = ["std"]}
rust_decimal_macros = "1.37.1"
serde = {version = "1.0.219", features = ["derive"]}
strum = {version = "0.27.1", features = ["derive"]}

[dev-dependencies]
criterion = {version = "0.6.0", features = ["real_blackbox", "html_reports"]}
moldenfile = {version = "0.1.0", git = "https://github.com/Edgeworth/moldenfile"}
pretty_assertions = "1.4.1"
serde_json = "1.0.140"

[[bench]]
harness = false
name = "calendar"
