[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["date-and-time"]
description = "time/date/calendar/timeseries library"
edition = "2024"
keywords = ["calendar", "time", "chrono"]
license = "MIT OR Apache-2.0"
name = "mhrono"
repository = "https://github.com/Edgeworth/mhrono"
version = "0.1.0"

[dependencies]
auto_ops = "0.3.0"
chrono = {version = "0.4.42", features = ["serde"]}
chrono-tz = {version = "0.10.4", features = ["serde"]}
derive_more = {version = "2.1.1", features = ["display", "is_variant"]}
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.9.2"
rust_decimal = {version = "1.39.0", features = ["std"]}
rust_decimal_macros = "1.39.0"
serde = {version = "1.0.228", features = ["derive"]}
strum = {version = "0.27.2", features = ["derive"]}
thiserror = "2.0.17"

[dev-dependencies]
approx = "0.5.1"
criterion = {version = "0.8.1", features = ["real_blackbox", "html_reports"]}
moldenfile = {version = "0.1.0", git = "https://github.com/Edgeworth/moldenfile"}
pretty_assertions = "1.4.1"
proptest = "1.9.0"
serde_json = "1.0.149"

[[bench]]
harness = false
name = "calendar"
